src/objects/Child__c.object
<CustomObject>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Father__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Father</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Children as Father</relationshipLabel>
        <relationshipName>Father_Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Mother__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mother</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Children as Mother</relationshipLabel>
        <relationshipName>Mother_Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Family_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Family Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHS_Number__c</fullName>
        <label>NHS Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Child</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NHS_Number__c</columns>
        <columns>First_Name__c</columns>
        <columns>Family_Name__c</columns>
        <columns>Birth_Date__c</columns>
        <columns>Sex__c</columns>
        <columns>Contact_Mother__c</columns>
        <columns>Contact_Father__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{000000}</displayFormat>
        <label>Child Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Children</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Valid_NHS_Number</fullName>
        <active>true</active>
        <errorConditionFormula>!(ISBLANK(NHS_Number__c)||REGEX( NHS_Number__c , &quot;[0-9]{3}-[0-9]{3}-[0-9]{4}&quot;))</errorConditionFormula>
        <errorDisplayField>NHS_Number__c</errorDisplayField>
        <errorMessage>The NHS Number provided is not valid.</errorMessage>
    </validationRules>
</CustomObject>